Increase z-index to fix themes booking sub menu.

--- a/app/assets/stylesheets/_globalnav/_core/_rows.sass
+++ b/app/assets/stylesheets/_globalnav/_core/_rows.sass
@@ -178,7 +178,7 @@ body
 // ----------------------------------------------------------------------------
 
 .row--primary
-  z-index: 2
+  z-index: 6
   position: relative
   .responsive &
     position: static
